namespaces/cloud-platform-live-0.k8s.integration.dsd.io/laa-fala-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-fala-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/application: "Find A Legal Advisor"
    cloud-platform.justice.gov.uk/owner: "LAA Get Access: laa-get-access@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/fala"
